--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v1
         with:
-          path: "docs"
+          path: "artifacts"
 
       - name: Deploy to GitHub Pages
         id: deployment
